--- a/JsonBenchmark/packages.config
+++ b/JsonBenchmark/packages.config
@@ -3,6 +3,7 @@
   <package id="BenchmarkDotNet" version="0.10.14" targetFramework="net462" />
   <package id="BenchmarkDotNet.Core" version="0.10.14" targetFramework="net462" />
   <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.14" targetFramework="net462" />
+  <package id="fastJSON" version="2.1.31" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net462" />
@@ -52,4 +53,6 @@
   <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net462" />
+  <package id="ZeroFormatter" version="1.6.4" targetFramework="net461" />
+  <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net461" />
 </packages>
